syntax = "proto3";

package pb;

option go_package = "github.com/jithinlal/simplebank/pb";

message DeleteAccountRequest {
  int64 id = 1;
}
